# neurostasis

./: .gitignore  README.md  main.py  pyproject.toml
src/: data_loader.py  extraction.py  model.py  pre_process.py  train.py  utils.py
src/.test/: Receiving real time EEG data from LSL.py  first.py
src/neurostasis/: __init__.py  __main__.py  engagement.py  engagement_store.py  pupil.py
src/neurostasis/eeg/: __init__.py  __main__.py  attention.py
src/neurostasis/web/: app.js  engagement.html  engagement.js  index.html  methodology.html  neural-bg.js  styles.css
tests/: test_eeg.py  test_main.py
