[project]
name = "neurostasis"
version = "0.1.0"
description = "Using EEG (and pupil) data to identify cognitive disruptions, which will be altered using neuromodulation techniques"
readme = "README.md"
authors = [
    { name = "Ivan Sowerby", email = "me@ivan.engineer" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
neurostasis = "neurostasis:main"

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"
