[project]
name = "neurostasis"
version = "0.1.0"
description = "Using EEG (and pupil) data to identify cognitive disruptions, which will be altered using neuromodulation techniques"
readme = "README.md"
authors = [
    { name = "Ivan Sowerby", email = "me@ivan.engineer" }
]
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi>=0.116.1",
    "gpype==3.0.9",
    "gtec_licensing>=1.0.3",
    "pupil-labs-realtime-api>=1.7.3",
    "pylsl==1.17.6",
    "uvicorn>=0.35.0",
]

[project.scripts]
neurostasis = "neurostasis:main"

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
